wip: make non_mac work for mac

--- a/non_mac/Dockerfile
+++ b/non_mac/Dockerfile
@@ -1,16 +1,24 @@
-FROM elixir:1.14-alpine
-
-RUN apk update && apk add \
-  inotify-tools git build-base npm bash
+# https://hub.docker.com/r/hexpm/elixir/tags?name=debian-bookworm-20230612-slim&ordering=name
+FROM "hexpm/elixir:1.15.7-erlang-26.1.1-debian-bookworm-20230612-slim"
 
 ARG host_user_name
 ARG host_group_name
 ARG host_uid
 ARG host_gid
+ARG host_ostype
 
-RUN apk add shadow && groupadd -g $host_gid $host_group_name \
-  && useradd -m -s /bin/bash -u $host_uid -g $host_gid $host_user_name
+# install build dependencies
+RUN apt-get update -y && apt-get install -y build-essential git && \
+    apt-get clean && rm -f /var/lib/apt/lists/*_*
+
+RUN if [ "$host_ostype" = "Linux" ]; then \
+      addgroup --gid "$host_gid" "$host_group_name"; \
+      adduser --uid "$host_uid" --gid "$host_gid" "$host_user_name"; \
+    fi
 
 USER $host_user_name
 
-RUN mix do local.hex --force, local.rebar --force, archive.install --force hex phx_new
+# install hex + rebar + phx_new
+RUN mix local.hex --force && \
+    mix local.rebar --force && \
+    mix archive.install --force hex phx_new
