--- a/non_mac/Makefile
+++ b/non_mac/Makefile
@@ -5,3 +5,5 @@ setup:
 	echo "host_group_name=${USER}" >> .env
 	echo "host_uid=`id -u`" >> .env
 	echo "host_gid=`id -g`" >> .env
+	echo "host_ostype=`uname`" >> .env
+	cat .env
